[package]
name = "isakmp"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Niklas Pfister <git@omikron.dev>"]
description = "Protocol implementation of isakmp"

[dependencies]
# RNG
rand = { version = "~0.9" }

# Serialization library
serde = { version = "~1", features = ["derive"] }

# Iterate over enums
strum = { version = "~0.27", features = ["derive"] }
# Error management
thiserror = { version = "~2" }
# Logging
log = { version = "~0.4" }

# Zerocost memory manipulation
zerocopy = { version = "~0.7", features = ["derive"] }
